--- a/css/medicacaoDia.css
+++ b/css/medicacaoDia.css
@@ -96,12 +96,19 @@ main {
   font-weight: bold;
 }
 
+.card-header i {
+  font-weight: bold;
+  font-size: 28px;
+}
+
 .card-content {
   color: var(--corVermelho);
   font-weight: bold;
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
   width: 100%;
   max-width: 412px;
   display: flex;
@@ -127,4 +134,97 @@ footer button {
 
 footer button i {
   font-size: 45px;
+}
+
+.find-medicament {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 200px;
+  margin: 1rem 2rem;
+  padding: 1rem;
+  background-color: var(--corLembrete);
+  border-radius: 15px;
+}
+
+.find-medicament h2 {
+  font-size: 21px;
+  color: var(--corVermelho);
+}
+
+.find-medicament h3 {
+  font-size: 18px;
+  color: var(--corVermelho);
+  font-weight: bold;
+}
+
+.input-content label {
+  color: var(--corVermelho);
+  font-weight: bold;
+  font-size: 18px;
+  margin-left: .3rem;
+}
+
+.input-content input {
+  padding: 1rem;
+  width: 100%;
+  border-radius: 5px;
+  border: 2px solid var(--corVermelho);
+}
+
+.medicament-details {
+  margin: 1rem 2rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid red;
+  border-radius: 15px;
+  background-color: #fff;
+  height: 250px;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+} 
+
+.details-content {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.medicament-details button {
+  padding: .75rem;
+  border: none;
+  background-color: transparent;
+  font-size: 18px;
+  color: var(--corVermelho);
+  font-weight: bold;
+}
+
+.card-details {
+  background-color: #fff;
+  color: #000;
+  font-weight: bold;
+  font-size: 1.4rem;
+  border: 1px solid var(--corVermelho);
+  height: 120px;
+}
+
+.card-details select, input {
+  padding: .5rem;
+  border-radius: 10px;
+  border: 1px solid #222;
+}
+
+.nav-card button {
+  margin: 1rem 2rem;
+  padding: 1rem;
+  border: none;
+  background-color: var(--corVerde);
+  color: #fff;
+  font-weight: bold;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
