--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,8 @@ header {
     background-color: var(--corVerde);
     font-weight: bold;
     border: none;
-    padding: .25rem;
+    font-size: 18px;
+    padding: 1rem .25rem;
     border-radius: 15px;
     -webkit-box-shadow: 0px 4px 13px 0px rgba(221,221,221,1);
     -moz-box-shadow: 0px 4px 13px 0px rgba(221,221,221,1);
@@ -140,11 +141,12 @@ header {
 }
 
 .red-btn {
+    font-size: 18px;
     color: #fff;
     background-color: var(--corVermelho);
     font-weight: bold;
     border: none;
-    padding: .25rem;
+    padding: 1rem .25rem;
     border-radius: 15px;
     -webkit-box-shadow: 0px 4px 13px 0px rgba(221,221,221,1);
     -moz-box-shadow: 0px 4px 13px 0px rgba(221,221,221,1);
