--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,72 @@ footer button i {
     font-size: 45px;
 }
 
+.form-control {
+    background: linear-gradient(145deg, var(--corVermelho), var(--corLembrete));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.form-content {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    background-color: #fff;
+    padding: 1rem;
+    height: 300px;
+    width: 280px;
+    border-radius: 25px;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+}
+
+.logo-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: var(--corVermelho);
+    font-weight: bold;
+}
+
+.logo-content i {
+    font-size: 32px;
+}
+
+.form-content form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.form-content form button{
+    padding: .5rem;
+    background-color: var(--corVerde);
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+}
+
+.form-labels {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-labels label {
+    font-size: 1.3rem;
+    color: var(--corVermelho);
+}
+
+.form-labels input {
+    padding: .70rem;
+    border-radius: 5px;
+}
+
 /* Responsividade para diversos tamanhos de celulares */
 
 /* Telas muito pequenas (até 320px - iPhone SE, antigos) */
